--- a/homepage.html
+++ b/homepage.html
@@ -11,8 +11,19 @@
     <title>Chess AI</title>
   </head>
   <body>
-    <h1>Welcome to this site!</h1>
-    <h1>Prepare youself to get unretarted!!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Welcome to this site!</h1>
+          <h1>Prepare youself to get unretarted!!</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p>loool</p>
+        </div>
+      </div>
+    </div>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
