--- a/homepage.html
+++ b/homepage.html
@@ -10,17 +10,17 @@
 
     <title>Chess AI</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1>Welcome to this site!</h1>
-          <h1>Prepare youself to get unretarted!!</h1>
+          <h1 class="text-white">Welcome to this site!</h1>
+          <h1 class="text-white">Prepare youself to get unretarted!!</h1>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <p>loool</p>
+          <p class="text-white">loool</p>
         </div>
       </div>
     </div>
