#1 done with this task I think

--- a/homepage.html
+++ b/homepage.html
@@ -19,8 +19,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-6">
           <p class="text-white">loool</p>
+        </div>
+        <div class="col-6">
+          <p class="text-white">Oh snap</p>
         </div>
       </div>
     </div>
