--- a/homepage.html
+++ b/homepage.html
@@ -16,6 +16,8 @@
         <div class="col">
           <h1 class="text-white">Welcome to this site!</h1>
           <h1 class="text-white">Prepare youself to get unretarted!!</h1>
+          <button type="button">Start</button>
+          <button type="button">Regler</button>
         </div>
       </div>
       <div class="row">
