--- a/homepage.html
+++ b/homepage.html
@@ -16,8 +16,10 @@
         <div class="col">
           <h1 class="text-white">Welcome to this site!</h1>
           <h1 class="text-white">Prepare youself to get unretarted!!</h1>
-          <button type="button">Start</button>
-          <button type="button">Regler</button>
+        <div class = "menu-buttons">
+          <a href="/homepage/gameSetup">Start</a>
+          <a href="/homepage/regler">regler</a>
+        </div>
         </div>
       </div>
       <div class="row">
