#2 made the buttons a bit nicer

--- a/homepage.html
+++ b/homepage.html
@@ -8,20 +8,25 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Chess AI</title>
+    <title>Home - Chess AI</title>
   </head>
   <body class="bg-dark">
     <div class="container">
+
       <div class="row">
         <div class="col">
           <h1 class="text-white">Welcome to this site!</h1>
           <h1 class="text-white">Prepare youself to get unretarted!!</h1>
-        <div class = "menu-buttons">
-          <a href="/homepage/gameSetup">Start</a>
-          <a href="/homepage/regler">regler</a>
-        </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col">
+          <a class="btn btn-primary" role="button" href="./gameSetup.html">Start</a>
+          <a class="btn btn-primary" role="button" href="./regler.html">Regler</a>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-6">
           <p class="text-white">loool</p>
@@ -30,6 +35,7 @@
           <p class="text-white">Oh snap</p>
         </div>
       </div>
+
     </div>
 
     <!-- Bootstrap JavaScript -->
