--- a/gameSetup.html
+++ b/gameSetup.html
@@ -8,7 +8,36 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Chess AI</title>
+    <title>Game - Chess AI</title>
   </head>
-  
-  </html>
+  <body class="bg-dark">
+    <div class="container">
+
+      <div class="row">
+        <div class="col">
+          <h1 class="text-white">Welcome to the new page!</h1>
+          <h1 class="text-white">Now please play!</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <a class="btn btn-secondary" role="button" href="#">Lool</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <p class="text-white">loool</p>
+        </div>
+        <div class="col-6">
+          <p class="text-white">Oh snap</p>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  </body>
+</html>
