made a bit more on the rules page! 😇

--- a/regler.html
+++ b/regler.html
@@ -8,31 +8,32 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Home - Chess AI</title>
+    <title>Rules - Chess AI</title>
   </head>
   <body class="bg-dark">
     <div class="container">
 
       <div class="row">
         <div class="col">
-          <h1 class="text-white">Welcome to this site!</h1>
-          <h1 class="text-white">Prepare youself to get unretarted!!</h1>
+          <h1 class="text-white">Here are the rules of the game:</h1>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mt-3">
         <div class="col">
-          <a class="btn btn-primary" role="button" href="./game_setup.html">Start</a>
-          <a class="btn btn-primary" role="button" href="./regler.html">Regler</a>
+          <a class="btn btn-secondary" role="button" href="#">Lool</a>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-6">
-          <p class="text-white">loool</p>
-        </div>
-        <div class="col-6">
-          <p class="text-white">Oh snap</p>
+      <div class="row mt-5">
+        <div class="col">
+          <div class="card text-white bg-secondary mb-3" style="max-width: 25rem;">
+            <div class="card-header">Rule nr. 1</div>
+            <div class="card-body">
+              <h5 class="card-title">Do not kick the opponent in the... you know what I mean.</h5>
+              <p class="card-text">To elaborate you have to keep in mind that...</p>
+            </div>
+          </div>
         </div>
       </div>
 
