--- a/pages/game_setup.html
+++ b/pages/game_setup.html
@@ -33,13 +33,13 @@
                   <span class="badge rounded-pill p-4" id="difficulty-form-badge">
                     <div class="row">
                       <div class="col-1">
-                        <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill"></i>
+                        <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill" style="font-size: 2rem; color: rgb(15,81,249);"></i>
                       </div>
                       <div class="col">
                         <input value="0" id="difficulty" type="range" class="form-range" min="0" max="6">
                       </div>
                       <div class="col-1">
-                        <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill"></i>
+                        <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill" style="font-size: 2rem; color: rgb(15,81,249);"></i>
                       </div>
                     </div>
                   </span>
