made the index page look a lot better!

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,37 +7,32 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+    <!-- Our own custom made css -->
+    <link href="../styles/main.css" rel="stylesheet">
     <title>Home - Chess AI</title>
   </head>
-  <body class="bg-dark">
+  <body class="index-bg">
     <div class="container">
-
-      <div class="row">
+      <div class="row mt-5">
         <div class="col">
-          <h1 class="text-white">Welcome to this site!</h1>
-          <h1 class="text-white">Prepare youself to get unretarted!!</h1>
+          <h1 class="title fst-italic text-danger d-inline">Chess</h1>
+          <h1 class="title fst-italic text-primary d-inline">Cog</h1>
+          <h1 class="title fst-italic text-white d-inline">Increaser</h1>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col">
-          <a class="btn btn-primary" role="button" href="./game_setup.html">Start</a>
-          <a class="btn btn-primary" role="button" href="./regler.html">Regler</a>
-        </div>
-      </div>
-
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-6">
-          <p class="text-white">loool</p>
+          <img src="../images/presentation-img.png" alt="a women playing chess against a robot">
         </div>
-        <div class="col-6">
-          <p class="text-white">Oh snap</p>
+        <div class="col-12 col-md-2 align-self-center offset-md-3">
+          <div class="d-grid gap-2">
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="./game_setup.html">start</a>
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="./game_setup.html">videnskaben</a>
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase" role="button" href="./regler.html">regler</a>
+          </div>
         </div>
       </div>
-
     </div>
-
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
