--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
     <!-- Our own custom made css -->
     <link href="../styles/main.css" rel="stylesheet">
     <title>Home - Chess AI</title>
@@ -27,7 +28,9 @@
         <div class="col-12 col-md-2 align-self-center offset-md-3">
           <div class="d-grid gap-2">
             <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="./game_setup.html">start</a>
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="./game_setup.html">videnskaben</a>
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="./videnskaben.html">
+              videnskaben
+            </a>
             <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase" role="button" href="./regler.html">regler</a>
           </div>
         </div>
