--- a/pages/regler.html
+++ b/pages/regler.html
@@ -8,37 +8,39 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
+    <!-- Our own custom made css -->
+    <link href="../styles/main.css" rel="stylesheet">
     <title>Rules - Chess AI</title>
   </head>
-  <body class="bg-dark">
+  <body class="index-bg">
     <div class="container">
-
-      <div class="row">
-        <div class="col">
-          <h1 class="text-white">Here are the rules of the game:</h1>
-        </div>
-      </div>
-
-      <div class="row mt-3">
-        <div class="col">
-          <a class="btn btn-secondary" role="button" href="#">Lool</a>
-        </div>
-      </div>
-
-      <div class="row mt-5">
-        <div class="col">
-          <div class="card text-white bg-secondary mb-3" style="max-width: 25rem;">
-            <div class="card-header">Rule nr. 1</div>
+      <div class="card card-border text-white bg-danger mt-5">
+        <div class="card-body mb-4 pt-0 mx-4">
+          <h5 class="card-title text-center my-3 text-uppercase">- Regler -</h5>
+          <div class="card card-border text-dark">
             <div class="card-body">
-              <h5 class="card-title">Do not kick the opponent in the... you know what I mean.</h5>
-              <p class="card-text">To elaborate you have to keep in mind that...</p>
+              <h5 class="card-title">Trin 1: Udgangsstillingen i skak</h5>
+              <p>I begyndelsen...</p>
+              <p>...</p>
+              <p>...</p>
+              <img src="../images/presentation-img.png" alt="a women playing chess against a robot">
+              <p>...</p>
+              <p>...</p>
+              <p>...</p>
+              <p>...</p>
+              <h5 class="card-title">Trin 2: Loool</h5>
+              <p>...</p>
+              <p>...</p>
+              <p>...</p>
+              <img src="../images/presentation-img.png" alt="a women playing chess against a robot">
+              <p>...</p>
+              <p>...</p>
+              <p>...</p>
             </div>
           </div>
         </div>
       </div>
-
     </div>
-
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
