Øget brugervenlighed + design
lol

--- a/pages/game_setup.html
+++ b/pages/game_setup.html
@@ -13,7 +13,7 @@
     <link href="../styles/main.css" rel="stylesheet">
     <title>Game - Chess AI</title>
   </head>
-  <body class="bg-dark">
+  <body class="index-bg">
     <div class="container">
       <div class="row my-5">
         <div class="col">
@@ -53,6 +53,9 @@
             <button type="submit" class="btn btn-primary btn-lg">Begynd Spil</button>
           </div>
         </div>
+        <div class="row mt-3">
+          <div class="col text-center">
+            <a class="btn btn-primary" href="index.html" role="button">Vend Tilbage</a>
       </form>
     </div>
 
