--- a/pages/game_setup.html
+++ b/pages/game_setup.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <!-- Our own custom made css -->
     <link href="../styles/main.css" rel="stylesheet">
-    <title>Game - Chess AI</title>
+    <title>Game Setup - Chess AI</title>
   </head>
   <body class="index-bg">
     <div class="container">
