--- a/pages/game.html
+++ b/pages/game.html
@@ -11,16 +11,19 @@
     <!-- Our own custom made css -->
     <link href="../styles/main.css" rel="stylesheet">
     <title>Game - Chess AI</title>
-</head>
-<body class="index-bg">
+  </head>
+  <body class="index-bg">
     <div class="container">
-
-
-
-
-
+      <div class="row justify-content-center mt-5">
+        <main class="col canvas">
+        </main>
+      </div>
     </div>
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <!-- p5.js JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
+    <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
+    <script src="../js/sketch.js"></script>
   </body>
 </html>
