--- a/pages/game_setup.html
+++ b/pages/game_setup.html
@@ -50,7 +50,8 @@
         </div>
         <div class="row mt-5">
           <div class="col text-center">
-            <button type="submit" class="btn btn-primary btn-lg">Begynd Spil</button>
+            <!--<button type="submit" class="btn btn-primary btn-lg">Begynd Spil</button>-->
+            <a class="btn btn-primary" href="game.html" role="button">Begynd Spil</a>
           </div>
         </div>
         <div class="row mt-3">
