--- a/pages/regler.html
+++ b/pages/regler.html
@@ -20,22 +20,7 @@
           <div class="card card-border text-dark">
             <div class="card-body">
               <h5 class="card-title">Trin 1: Udgangsstillingen i skak</h5>
-              <p>I begyndelsen...</p>
-              <p>...</p>
-              <p>...</p>
-              <img src="../images/presentation-img.png" alt="a women playing chess against a robot">
-              <p>...</p>
-              <p>...</p>
-              <p>...</p>
-              <p>...</p>
-              <h5 class="card-title">Trin 2: Loool</h5>
-              <p>...</p>
-              <p>...</p>
-              <p>...</p>
-              <img src="../images/presentation-img.png" alt="a women playing chess against a robot">
-              <p>...</p>
-              <p>...</p>
-              <p>...</p>
+              <a href="https://www.chess.com/da/skak-regler">Ikke brugervenlig hyperlink</a>
             </div>
           </div>
         </div>
