Regler åbner i ny tab

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,10 +28,8 @@
         <div class="col-12 col-md-2 align-self-center offset-md-3">
           <div class="d-grid gap-2">
             <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-white text-uppercase text-dark" role="button" href="./game_setup.html">start</a>
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="./videnskaben.html">
-              videnskaben
-            </a>
-            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase" role="button" href="./regler.html">regler</a>
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-primary text-uppercase" role="button" href="./videnskaben.html">videnskaben</a>
+            <a class="px-5 fs-4 text-decoration-none badge rounded-pill bg-danger text-uppercase" role="button" href="https://www.chess.com/da/skak-regler" target="_blank">regler</a>          
           </div>
         </div>
       </div>
