--- a/pages/game.html
+++ b/pages/game.html
@@ -24,6 +24,8 @@
     <!-- p5.js JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
     <!-- Our own custom made JavaScript code containing all of the chess related stuff -->
+    <script src="../js/piece.js"></script>
+    <script src="../js/board.js"></script>
     <script src="../js/sketch.js"></script>
   </body>
 </html>
