--- a/pages/game_setup.html
+++ b/pages/game_setup.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <!-- Our own custom made css -->
-    <link href="../styles/main.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
     <title>Game Setup - Chess AI</title>
   </head>
   <body class="index-bg">
@@ -23,26 +23,41 @@
       <form action="#" method="POST">
         <div class="row justify-content-center">
           <div class="col-8">
-            <div class="card difficulty-container shadow-lg">
+            <div class="card difficulty-container shadow-lg px-3">
               <div class="card-body">
-                <h4 class="card-title text-center">Sværhedsgrad</h4>
+                <h4 class="card-title text-center mb-3">Sværhedsgrad</h4>
                 <div class="row">
-                  <p class="card-text text-center">Nu skal du vælge...</p>
+                  <div class="col">
+                    <span class="badge rounded-pill p-4" id="difficulty-form-badge">
+                      <div class="row justify-content-between">
+                        <div class="col-1">
+                          <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill"></i>
+                        </div>
+                        <div class="col-10">
+                          <input value="0" id="difficulty" type="range" class="form-range" min="0" max="6">
+                        </div>
+                        <div class="col-1">
+                          <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill"></i>
+                        </div>
+                      </div>
+                    </span>
+                  </div>
                 </div>
-                <div class="row px-5 mt-2">
-                  <span class="badge rounded-pill p-4" id="difficulty-form-badge">
-                    <div class="row">
-                      <div class="col-1">
-                        <i id="left-arrow" class="proper-icon-size bi bi-caret-left-fill"></i>
-                      </div>
-                      <div class="col">
-                        <input value="0" id="difficulty" type="range" class="form-range" min="0" max="6">
-                      </div>
-                      <div class="col-1">
-                        <i id="right-arrow" class="proper-icon-size bi bi-caret-right-fill"></i>
-                      </div>
+                <div class="row mt-3 mb-1">
+                  <div class="col">
+                    <div class="form-check form-switch text-center">
+                      <label class="form-check-label" for="black-or-white-switch">
+                        Her skal du vælge om du vil være sort eller hvid
+                      </label>
                     </div>
-                  </span>
+                  </div>
+                </div>
+                <div class="row justify-content-center">
+                  <div class="col-1">
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" type="checkbox" id="black-or-white-switch">
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -69,6 +84,8 @@
 
       const leftArrow = document.getElementById("left-arrow");
       const rightArrow = document.getElementById("right-arrow");
+
+      const switchToggle = document.getElementById("black-or-white-switch");
 
       const upperLimit = 6;
 
@@ -99,6 +116,12 @@
         difficultyFormEl.value = parseInt(difficultyFormEl.value) + 1;
         setProperBadgeColor(difficultyFormEl.value);
       });
+
+      switchToggle.addEventListener("change", function() {
+        if (this.checked) switchToggle.classList.add("checked-switch-background");
+        else switchToggle.classList.remove("checked-switch-background");
+      });
+
     </script>
   </body>
 </html>
